Bug 382467 - "Save" button works on a wrong file
Summary: "Save" button works on a wrong file
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 16.08
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-18 14:19 UTC by Victor Porton
Modified: 2017-07-25 10:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Porton 2017-07-18 14:19:06 UTC
Open several files and show Documents sidebar.

Select one of the files in the sidebar by left click. Then right click another file in the sidebar. Close the context menu by clicking outside the sidebar.

Now the file you right clicked is on blue background in the sidebar. But if you click Save button, the file which you previously clicked with left button will be saved instead of the file with blue background.

It is very confusing (and sometimes may even lead to data loss) that a file different of that one with blue background is saved.

Please ensure that Save button (and other operations) always (when the Documents sidebar tab is visible) work on the file which is on blue background in the sidebar, not on some other file.

Version 16.08.3
Comment 1 Christoph Cullmann 2017-07-25 10:47:31 UTC
Git commit f611baa1944c07258407fdc7a8e015d2ef866014 by Christoph Cullmann.
Committed on 25/07/2017 at 10:45.
Pushed by cullmann into branch 'master'.

ensure that the highlighted document is the active one to avoid
confusions

M  +1    -0    addons/filetree/katefiletree.cpp

https://commits.kde.org/kate/f611baa1944c07258407fdc7a8e015d2ef866014