ensure that the highlighted document is the active one to avoid confusions

BUG: 382467